# CleanMicroservicesStarter

./: .gitignore  LICENSE  docker-compose.yml  justfile  readme.md
user_service/: Cargo.toml  justfile
user_service/migrations/: 20250826124007_create_user_table.sql
user_service/src/: main.rs
user_service/src/databases/: postgresql.rs
user_service/src/server/: configs.rs  mod.rs  routering.rs  server.rs
user_service/src/user/: handlers.rs  mod.rs  model.rs  usege.rs
