[package]
name = "user_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "uuid",                 # 👈 Add this line
] }
dotenvy = "0.15"
tower = "0.5.2"
thiserror = "2.0.12"
uuid = { version = "1", features = ["v4", "serde"] }
hyper = { version = "0.14.27", features = ["full"] }
anyhow = "1.0.99"
async-trait = "0.1.89"
